[project]
name = "coach-ai-weather-service"
version = "0.0.1"
description = ""
authors = [
    {name = "mmeerrccyy",email = "taras.mercury@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openmeteo-requests (>=1.5.0,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "coach"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
